[gd_scene load_steps=9 format=3 uid="uid://c200kvkwxvbbb"]

[ext_resource type="Texture2D" uid="uid://ctk0rc76s5tri" path="res://assets/backgrounds/Frame 15.png" id="1_6l45l"]
[ext_resource type="Script" path="res://scripts/welcome_screen.gd" id="1_y01ot"]
[ext_resource type="Texture2D" uid="uid://kfgynanxgo0l" path="res://assets/backgrounds/Untitled design (92) 1.png" id="2_n1crj"]
[ext_resource type="Texture2D" uid="uid://bu2ay4rmxpqxl" path="res://assets/backgrounds/Group 138.png" id="3_t3p40"]
[ext_resource type="Texture2D" uid="uid://yd5bv3d10rrn" path="res://assets/backgrounds/Alt History.png" id="4_d2bd4"]
[ext_resource type="Texture2D" uid="uid://cnbdt1c782p6n" path="res://assets/backgrounds/image-removebg-preview 1.png" id="5_spu6c"]
[ext_resource type="Texture2D" uid="uid://cpgba7n4ishdt" path="res://assets/backgrounds/image-removebg-preview (2) 2.png" id="6_8int7"]
[ext_resource type="Texture2D" uid="uid://88elgp7avv30" path="res://assets/backgrounds/Tap to continue.png" id="7_7vebv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_y01ot")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6l45l")

[node name="CharacterImage" type="Sprite2D" parent="."]
position = Vector2(258, 483)
texture = ExtResource("2_n1crj")

[node name="MessageContainer" type="Sprite2D" parent="."]
position = Vector2(844, 431)
texture = ExtResource("3_t3p40")

[node name="AltHistory" type="Sprite2D" parent="."]
position = Vector2(672, 104)
scale = Vector2(0.477099, 0.477099)
texture = ExtResource("4_d2bd4")

[node name="Big Splash" type="Sprite2D" parent="."]
position = Vector2(771, 107)
scale = Vector2(0.461709, 0.461709)
texture = ExtResource("5_spu6c")

[node name="Dot2" type="Sprite2D" parent="."]
position = Vector2(491, 118)
scale = Vector2(0.378427, 0.378427)
texture = ExtResource("6_8int7")

[node name="TapToContinue" type="Sprite2D" parent="."]
position = Vector2(1091, 615)
texture = ExtResource("7_7vebv")

[node name="WelcomeMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 350.0
offset_right = 1200.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 32

[node name="TapDetector" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
